--- a/src/theme/css/frontend/_side-text-image.scss
+++ b/src/theme/css/frontend/_side-text-image.scss
@@ -69,23 +69,27 @@
   &__image {
     @apply relative col-span-full -mx-px28;
 
-    @each $screen in md, lg, lg2, xl, 2xl {
-      @screen #{$screen} {
-        margin-right: calc(-1 * (((100vw - #{theme('screens.' + $screen)}) / 2) + theme('container.padding.#{$screen}')));
-      }
-    }
-
     @screen md {
       @apply col-span-4 col-start-5 ml-0;
+      @include bleed-r(md);
     }
 
     @screen lg {
       @apply col-span-6 col-start-7;
+      @include bleed-r(lg);
     }
 
-    // Max container expand.
+    @screen lg2 {
+      @include bleed-r(lg2);
+    }
+
+    @screen xl {
+      @include bleed-r(xl);
+    }
+
+    // Max breakpoint for bleed is 1920px.
     @media only screen and (min-width: 1920px) {
-      margin-right: calc( -1 * ( (theme('container.padding.xl') * 2) + 20px ) );
+      margin-right: calc((#{rem-calc(1920px)} - theme('container.screens.xl') + (theme('container.padding.xl') * 2)) / -2 );
     }
 
     // Aspect Ratio
