--- a/src/theme/css/frontend/donate-page/_donate.scss
+++ b/src/theme/css/frontend/donate-page/_donate.scss
@@ -201,6 +201,11 @@
       @include bleed-r(xl);
     }
 
+    // Max breakpoint for bleed is 1920px.
+    @media only screen and (min-width: 1920px) {
+      margin-right: calc((#{rem-calc(1920px)} - theme('container.screens.xl') + (theme('container.padding.xl') * 2)) / -2 );
+    }
+
     .image-wrapper {
       padding-top: calc((1 / 1) * 100%);
       @apply block relative overflow-hidden w-full h-auto;
